--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
 
     <link
       rel="preload"
-      href="Virgil.woff2"
+      href="HandWritingFont.woff2"
       as="font"
       type="font/woff2"
       crossorigin="anonymous"
@@ -121,7 +121,7 @@
     <link
       rel="manifest"
       href="manifest.json"
-      style="--pwacompat-splash-font: 24px Virgil"
+      style="--pwacompat-splash-font: 24px HandWritingFont"
     />
 
     <link rel="stylesheet" href="fonts.css" type="text/css" />
